@@ -76,6 +76,8 @@ static const R_CallMethodDef callMethods[] = {LCALLDEF(initGrid, 1),
                                               LCALLDEF(pretty, 1),
                                               LCALLDEF(locator, 0),
                                               LCALLDEF(convert, 4),
+                                              LCALLDEF(devLoc, 2),
+                                              LCALLDEF(devDim, 2),
                                               LCALLDEF(layoutRegion, 2),
                                               LCALLDEF(getGPar, 0),
                                               LCALLDEF(setGPar, 1),
